| Bug #39886 | Table full for MEMORY table is not written into error log | ||
|---|---|---|---|
| Submitted: | 6 Oct 2008 15:12 | Modified: | 5 Feb 2009 14:54 |
| Reporter: | Bogdan Kecman | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Memory | Severity: | S3 (Non-critical) |
| Version: | 5.0,5.1 | OS: | Any |
| Assigned to: | Satya B | Target Version: | 5.1+ |
| Triage: | Triaged: D3 (Medium) | ||
[6 Oct 2008 15:12]
Bogdan Kecman
[28 Jan 2009 11:53]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64272 2751 Satya B 2009-01-28 Fix for BUG#39886 - Table full for MEMORY table is not written into error log When a MEMORY table is full the error is returned to client but not written to error log. Fixed the handler api to write the error mesage to error log when the table is full. Note: No TestCase included as testing the error log is non-trivial.
[29 Jan 2009 11:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64437 2754 Satya B 2009-01-29 An addition to BUG#39886 - Table full for MEMORY table is not written into error log After the earlier fix, mtr tests reports "table full" messages as warnings. This is expected, this patch fixes the mtr testframework to ignore the error message.
[29 Jan 2009 12:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64451 2754 Satya B 2009-01-29 An addition to BUG#39886 - Table full for MEMORY table is not written into error log After the earlier fix, mtr tests reports "table full" messages as warnings. This is expected, this patch fixes the mtr testframework to ignore the error message.
[3 Feb 2009 9:41]
Bugs System
Pushed into 5.1.32 (revid:joro@sun.com-20090203090549-gos3v4320vimrzg6) (version source revid:satya.bn@sun.com-20090129120032-2ue86nsbatyongfx) (merge vers: 5.1.32) (pib:6)
[4 Feb 2009 11:16]
Bugs System
Pushed into 6.0.10-alpha (revid:kostja@sun.com-20090204104420-mw1i2u9lum4bxjo6) (version source revid:davi.arnaut@sun.com-20090129184519-mgp2vr1rna9nk8li) (merge vers: 6.0.10-alpha) (pib:6)
[5 Feb 2009 14:54]
Tony Bedford
An entry was added to the 5.1.32 and 6.0.10 changelogs: When a MEMORY table became full the generated error was returned to the client but was not written to the error log.
[17 Feb 2009 15:01]
Bugs System
Pushed into 5.1.32-ndb-6.3.23 (revid:tomas.ulin@sun.com-20090217131017-6u8qz1edkjfiobef) (version source revid:tomas.ulin@sun.com-20090203133556-9rclp06ol19bmzs4) (merge vers: 5.1.32-ndb-6.3.22) (pib:6)
[17 Feb 2009 16:48]
Bugs System
Pushed into 5.1.32-ndb-6.4.3 (revid:tomas.ulin@sun.com-20090217134419-5ha6xg4dpedrbmau) (version source revid:tomas.ulin@sun.com-20090203133556-9rclp06ol19bmzs4) (merge vers: 5.1.32-ndb-6.3.22) (pib:6)
[17 Feb 2009 18:24]
Bugs System
Pushed into 5.1.32-ndb-6.2.17 (revid:tomas.ulin@sun.com-20090217134216-5699eq74ws4oxa0j) (version source revid:tomas.ulin@sun.com-20090202111723-1zzwax187rtls913) (merge vers: 5.1.32-ndb-6.2.17) (pib:6)
